--- a/package.json
+++ b/package.json
@@ -3,16 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/eslint-parser": "^7.24.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-flow": "^7.24.7",
+    "@babel/plugin-syntax-jsx": "^7.24.7",
+    "@babel/plugin-syntax-typescript": "^7.24.7",
+    "@babel/plugin-transform-react-jsx": "^7.24.7",
+    "@popperjs/core": "^2.11.8",
+    "@testing-library/dom": "^10.3.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/babel__core": "^7.20.5",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-is": "^18.3.0",
+    "@types/supports-color": "^8.1.3",
     "bootstrap": "^5.1.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-jest": "^25.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
-    "react-chrono": "^1.12.1",
+    "react-chrono": "^1.22.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-is": "^18.3.1",
     "react-markdown": "^7.0.1",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.1",
@@ -20,6 +39,7 @@
     "react-scripts": "^5.0.1",
     "react-social-icons": "^5.6.1",
     "styled-components": "^5.3.1",
+    "typescript": "^4.9.5",
     "typewriter-effect": "^2.18.2",
     "use-dark-mode": "^2.3.1",
     "vertical-timeline-component-for-react": "^1.0.7",
@@ -55,5 +75,6 @@
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
-  }
+  },
+  "packageManager": "yarn@4.3.1+sha256.2535167e742927e1d2a1610d5004576e4e8f764d2ca5470d19536790f55cd6e2"
 }
