--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -1,150 +1,143 @@
 {
-    "projects" : [
+  "projects": [
+    {
+      "image": "images/projects/fresh-family-photo.png",
+      "title": "Fresh Family Photo",
+      "bodyText": "- Photography Job Platform Single Page App made in React\n -  Users can create job posts as a Job Poster or Apply as a Photographer.\n - Dynamic user interface and functionality based on user type.",
+      "links": [
         {
-            "image" : "images/projects/portfolio-poster.png",
-            "title": "Dev Portfolio",
-            "bodyText": "- Developer Portfolio Website made in React\n -  Fully customisable and dynamic, easily change data and images.\n - Dark Mode Support",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/dev-portfolio"
-                },
-                {
-                    "text": "Live",
-                    "href": "https://mayankagarwal.me"
-                }
-            ],
-            "tags" : [
-                "React",
-                "Portfolio",
-                "JavaScript"
-            ]
+          "text": "GitHub",
+          "href": "https://github.com/chadbanghart/fresh-family-photo"
         },
         {
-            "image" : "images/projects/caaring-poster.png",
-            "title": "Caaring -  Cab Share App",
-            "bodyText": "- A Cab Sharing web app made using **Django** for **VIT** Students. People can create a new cab or request to join an existing cab.\n - Added User authentication and password reset using **SendGrid**.\n - Deployed on **heroku** using **gunicorn**.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/Caaring"
-                },
-                {
-                    "text": "Live",
-                    "href": "http://caaring.herokuapp.com"
-                }
-            ],
-            "tags" : [
-                "Python",
-                "Django",
-                "BootStrap",
-                "SendGrid",
-                "Heroku",
-                "Gunicorn",
-                "VIT"
-            ]
-        },
-        {
-            "image" : "images/projects/quiet-hours-poster.jpg",
-            "title": "Quiet Hours App",
-            "bodyText": "- An Android App that **automatically silences** your phone during class hours, designed for **VITians**.\n - Option to select class **slots** and **custom time**.\n - Option to put on Vibrate instead of Silent.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/QuietHours-Android"
-                }
-            ],
-            "tags" : [
-                "Java",
-                "Android",
-                "Alarm Manager",
-                "VIT"
-            ]
-        },
-        {
-            "title": "Secure Chat App",
-            "bodyText": "- An Android App that allows users to send texts in real time.\n - End to End encryption using **RSA** Algorithm.\n - Uses **Firebase** database to store texts.\n - Secured with **Fingerprint** lock.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/SecureChatApp"
-                }
-            ],
-            "tags" : [
-                "Java",
-                "Android",
-                "Firebase",
-                "RSA"
-            ]
-        },
-        {
-            "title": "MVVM Sample App",
-            "bodyText": "- An Android App that loads data from mock API and show in both **LinearLayout** and **GridLayout RecyclerView**.\n - Offline support using **Room** DB and **NetworkBoundResource**.\n - Uses the **MVVM** architecture.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/mvvm-sample-app"
-                }
-            ],
-            "tags" : [
-                "Kotlin",
-                "Android",
-                "MVVM",
-                "Room",
-                "Coroutines",
-                "Flow",
-                "Hilt-Dagger",
-                "NetworkBoundResource"
-            ]
-        },
-        {
-            "title": "Feed List App",
-            "bodyText": "- An Android App that loads list of feeds from a **paginated** API and shows in a RecyclerView.\n - Uses the **MVVM** architecture.\n - Uses **Paging 3** library along with other Architecture Components.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/Paginated-App-Feeds-List"
-                }
-            ],
-            "tags" : [
-                "Kotlin",
-                "Android",
-                "MVVM",
-                "Paging 3",
-                "Coroutines",
-                "Flow"
-            ]
-        },
-        {
-            "title": "Task Tracker",
-            "bodyText": "- A simple Task Tracker web app made with **Angular 12**.\n - Uses **mock JSON server** to get, add, delete or update tasks.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/task-tracker-app"
-                }
-            ],
-            "tags" : [
-                "TypeScript",
-                "Angular 12",
-                "JavaScript"
-            ]
-        },
-        {
-            "title": "Image Encryption/Decryption",
-            "bodyText": "- A Web App for Image Encryption and Decryption made in **Django**.\n - Uses **SDES** algorithm for encryption/decryption.",
-            "links": [
-                {
-                    "text": "GitHub",
-                    "href": "https://github.com/mayankagarwal09/img-encrypt-sdes"
-                }
-            ],
-            "tags" : [
-                "Python",
-                "Django",
-                "SDES",
-                "Cryptography"
-            ]
+          "text": "Live",
+          "href": "https://fresh-family-photo-ff142513c532.herokuapp.com/"
         }
-    ]
+      ],
+      "tags": [
+        "React",
+        "MongoDB",
+        "Express",
+        "NodeJs",
+        "Heroku",
+        "Token-Based Auth"
+      ]
+    },
+    {
+      "image": "images/projects/insightink.png",
+      "title": "InsightInk -  Journaling App",
+      "bodyText": "- A Dynamic Journaling web app made using **Django** to suit **Anyone's** journaling needs. People can create multiple journal, multiple entries per journal, and view entries displayed dynamically based on the template chosen.\n - Collaborated with team member from start to finish.\n - Deployed on **heroku** using **gunicorn**.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/chadbanghart/insightink"
+        },
+        {
+          "text": "Live",
+          "href": "https://insightink-611-d900faad8907.herokuapp.com/"
+        }
+      ],
+      "tags": [
+        "Python",
+        "Django",
+        "Materialize",
+        "AWS S3",
+        "Heroku",
+        "HTML",
+        "gunicorn"
+      ]
+    },
+    {
+      "image": "images/projects/food-inventory.png",
+      "title": "Food Inventory",
+      "bodyText": "- A Full Stack App that aids users in tracking their **food inventory** at home.\n - Multiple tracking properties, sorting functionality, and expiration tracking to aid the user in keeping their food inventory fresh, organized, and full.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/chadbanghart/food-inventory"
+        },
+        {
+          "text": "Live",
+          "href": "https://food-inventory-c033d1ab7909.herokuapp.com/"
+        }
+      ],
+      "tags": [
+        "MongoDB",
+        "Express",
+        "NodeJs",
+        "OAuth 2.0",
+        "BootStrap",
+        "Heroku"
+      ]
+    },
+    {
+      "image": "images/projects/blackjack.png",
+      "title": "Blackjack App",
+      "bodyText": "- A Desktop Blackjack App.\n - Double Down, Dealer Messaging, Wagering, and Buy back-in Features.\n - Created Using Vanilla Javascript.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/chadbanghart/blackjack"
+        },
+        {
+          "text": "Live",
+          "href": "https://chadbanghart.github.io/blackjack/"
+        }
+      ],
+      "tags": ["Javascript", "HTML", "CSS/Flexbox/Grid", "GitHub Pages"]
+    },
+    {
+      "title": "MVVM Sample App",
+      "bodyText": "- An Android App that loads data from mock API and show in both **LinearLayout** and **GridLayout RecyclerView**.\n - Offline support using **Room** DB and **NetworkBoundResource**.\n - Uses the **MVVM** architecture.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/mayankagarwal09/mvvm-sample-app"
+        }
+      ],
+      "tags": [
+        "Kotlin",
+        "Android",
+        "MVVM",
+        "Room",
+        "Coroutines",
+        "Flow",
+        "Hilt-Dagger",
+        "NetworkBoundResource"
+      ]
+    },
+    {
+      "title": "Feed List App",
+      "bodyText": "- An Android App that loads list of feeds from a **paginated** API and shows in a RecyclerView.\n - Uses the **MVVM** architecture.\n - Uses **Paging 3** library along with other Architecture Components.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/mayankagarwal09/Paginated-App-Feeds-List"
+        }
+      ],
+      "tags": ["Kotlin", "Android", "MVVM", "Paging 3", "Coroutines", "Flow"]
+    },
+    {
+      "title": "Task Tracker",
+      "bodyText": "- A simple Task Tracker web app made with **Angular 12**.\n - Uses **mock JSON server** to get, add, delete or update tasks.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/mayankagarwal09/task-tracker-app"
+        }
+      ],
+      "tags": ["TypeScript", "Angular 12", "JavaScript"]
+    },
+    {
+      "title": "Image Encryption/Decryption",
+      "bodyText": "- A Web App for Image Encryption and Decryption made in **Django**.\n - Uses **SDES** algorithm for encryption/decryption.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/mayankagarwal09/img-encrypt-sdes"
+        }
+      ],
+      "tags": ["Python", "Django", "SDES", "Cryptography"]
+    }
+  ]
 }
